# RedisLess

./: .gitignore  Cargo.toml  README.md  REDIS_FEATURES.md  build-for-macosx.sh  build.sh
.github/workflows/: build-and-test.yml  codeql-analysis.yml  test.yml
clients/: README.md
clients/golang/: go.mod  go.sum  redisless.go  redisless_linux.go  redisless_test.go  redisless_windows.go
clients/golang/lib/: libredisless.dylib
clients/nodejs/: .eslintrc.js  LICENSE  package.json
clients/nodejs/lib/: index.js
clients/nodejs/src/: index.js
clients/nodejs/test/: test.js
clients/python/: README.md  requirements.txt
clients/python/src/: libredisless.dylib  main.py  redisless.py
mpb/: Cargo.toml  README.md
mpb/src/: lib.rs
redisless/: Cargo.toml  README.md
redisless/.cargo/: config
redisless/benches/: benchmarks.rs
redisless/mpb/src/: lib.rs
redisless/raft/: Cargo.toml  README.md
redisless/raft/examples/: README.md  raftcat.rs  simple.rs  threaded.rs
redisless/raft/src/: core.rs  lib.rs  macros.rs  message.rs  node.rs  prelude.rs  raft.proto
redisless/raft/src/consensus/: mod.rs  state.rs
redisless/raft/src/log/: memory.rs  mod.rs  tests.rs
redisless/raft/tests/: commit.rs  common.rs  leader.rs  term.rs  voting.rs
redisless/src/: command.rs  error.rs  lib.rs  protocol.rs  server.rs
redisless/src/cluster/: mod.rs  node.rs  peer.rs  tests.rs  util.rs
redisless/src/command/: command_error.rs  mod.rs  util.rs
redisless/src/command/tests/: mod.rs
redisless/src/protocol/: error.rs  mod.rs  parser.rs
redisless/src/protocol/response/: mod.rs
redisless/src/protocol/tests/: mod.rs
redisless/src/server/: mod.rs
redisless/src/server/tests/: mod.rs  rstest_poc.rs
redisless/src/server/util/: mod.rs  run_command.rs
redisless/src/storage/: in_memory.rs  mod.rs
redisless/src/storage/models/: expiry.rs  hash.rs  meta.rs  mod.rs  redis_value.rs  string.rs
redisless/src/storage/tests/: mod.rs
redisless/src/tests/: mod.rs
redisless/storage/: Cargo.toml
redisless/storage/src/: in_memory.rs  lib.rs
scripts/: build-for-linux.sh  build-for-mac.sh  commands.sh
src/: command.rs  lib.rs  redis_protocol.rs
