[package]
name = "redisless"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redisless"
crate-type = ["dylib"]

[dependencies]
mpb = { path = "mpb" }
crossbeam-channel = "0.5.1"

[dev-dependencies]
redis = "0.20.0"
serial_test = "0.5.1"
