[package]
name = "mpb"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"
description = "This crate combine MPMC (Multi-producer Multi-consumer) with Broadcast on consumers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
