[package]
name = "redisless"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"
keywords = ["redis", "embedded"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redisless"
crate-type = ["cdylib", "rlib"]

[dependencies]
mpb = { path = "mpb" }
raft = { path = "raft" }
crossbeam-channel = "0.5"
rayon = "1.5"
uuid = { version = "0.8", features=["v4"] }
rand = "0.8"
prost = "0.7"
get_if_addrs = "0.5"
ipnet = "2.3"
chrono = "0.4"

[dev-dependencies]
cfg-if = "1.0.0"
redis = "0.20"
serial_test = "0.5"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
