[package]
name = "raft"
version = "0.1.0"
authors = ["Romaric Philogene <evoxmusic@gmail.com>"]
edition = "2018"

[features]
default = ["prost"]

[dependencies]
bytes = { version = "1.0", default-features = false, features = [] }
log = "0.4"
prost = { version = "0.7", default-features = false, features = ["prost-derive"], optional = true }
rand_core = { version = "0.6", default-features = false, features = [] }

[dev-dependencies]
derive_more = "0.99"
env_logger = { version = "0.8", default_features = false, features = [] }
itertools = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[[example]]
name = "simple"
test = true

[[example]]
name = "threaded"
test = true
